examples/test/testpolicy1442.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1442
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key27: value48
      key42: value11
      key11: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value17
          key34: value21
      podSelector:
        matchLabels:
          key35: value16
          key40: value46
